[package]
name = "futures-deep"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
futures = "0.3.27"
tokio = { version = "1.26.0", features = ["full"] }
tokio-rustls = "0.23.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
webpki = "0.22.0"
webpki-roots = "0.22.6"
